<resources>
    <string name="app_name">AppBarExample</string>
    <string name="action_faq">FAQ</string>
    <string name="action_favorite">favorite</string>
    <string name="action_privacy_policy">Privacy Policy</string>
    <string name="action_search">search</string>
    <string name="action_send_feedback">send feedback</string>
    <string name="action_settings">settings</string>
    <string name="action_show_detail">Show detail</string>
    <string name="action_show_snackbar">Show SnackBar</string>

    <string name="bullet_separator">•</string>

    <!-- Content descriptions -->
    <string name="content_description_avatar">Avatar icon of the sender</string>
    <string name="content_description_favorite">Favorite message icon</string>

    <!-- Detail -->
    <string name="message_to">to John</string>

    <!-- Error messages -->
    <string name="error_message_data_error_host">Unable to connect to the server. Is the device connected to the internet?</string>
    <string name="error_message_data_error_timeout">Connection to the server timed out.</string>

    <!-- Nav items -->
    <string name="nav_item_dashboard">Dashboard</string>
    <string name="nav_item_favorite">Favorite</string>
    <string name="nav_item_send_feedback">Send feedback</string>
    <string name="nav_item_settings">Settings</string>

    <!-- Titles -->
    <string name="title_dashboard">Dashboard</string>
    <string name="title_detail">Detail</string>
    <string name="title_favorite">Favorite</string>
    <string name="title_preferences">Preferences</string>

</resources>
