<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/inboxContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.inbox.DashboardFragment">

    <TextView
        android:id="@+id/dashboard_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_dashboard"
        app:layout_constraintBottom_toTopOf="@id/btnShowDetail"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
    />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnShowDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action_show_detail"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnShowSnackbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action_show_snackbar"
        app:layout_constraintTop_toBottomOf="@id/btnShowDetail"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>