<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintTop_toBottomOf="@id/divider_logo"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.navigation.NavigationView
            android:id="@+id/vLateralNavigation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="@android:color/transparent"
            android:theme="@style/AppTheme.NavigationViewOverlay"
            app:itemBackground="@drawable/navigation_item_background"
            app:itemHorizontalPadding="@dimen/keyline_2"
            app:itemIconPadding="@dimen/keyline_4"
            app:itemIconTint="@color/navigation_icon_color"
            app:itemTextColor="@color/navigation_item_color"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@id/divider_navigation"
            app:menu="@menu/lateral_navigation" />

        <View
            android:id="@+id/divider_navigation"
            style="@style/BottomSheetEntryDivider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/vForwardNavigation" />

        <com.google.android.material.navigation.NavigationView
            android:id="@+id/vForwardNavigation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:theme="@style/AppTheme.NavigationViewOverlay"
            app:itemBackground="@drawable/navigation_item_background"
            app:itemHorizontalPadding="@dimen/keyline_2"
            app:itemIconPadding="@dimen/keyline_4"
            app:itemIconTint="@color/navigation_icon_color"
            app:itemTextColor="@color/navigation_item_color"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@id/divider_footer"
            app:menu="@menu/forward_navigation" />

        <View
            android:id="@+id/divider_footer"
            style="@style/BottomSheetEntryDivider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/footer_separator" />

        <TextView
            android:id="@+id/tvPrivacyPolicy"
            style="@style/FooterClickableActionItemStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/action_privacy_policy"
            android:textAlignment="center"
            app:layout_constraintRight_toLeftOf="@id/footer_separator"
            app:layout_constraintTop_toBottomOf="@id/divider_footer" />

        <TextView
            android:id="@+id/footer_separator"
            style="@style/FooterActionItemStyle"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:gravity="center_vertical"
            android:text="@string/bullet_separator"
            app:layout_constraintBottom_toBottomOf="@id/tvFAQ"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/tvPrivacyPolicy" />

        <TextView
            android:id="@+id/tvFAQ"
            style="@style/FooterClickableActionItemStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:text="@string/action_faq"
            app:layout_constraintLeft_toRightOf="@id/footer_separator"
            app:layout_constraintTop_toBottomOf="@id/divider_footer" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>